--- a/Brokerages/QuantConnect.Brokerages.csproj
+++ b/Brokerages/QuantConnect.Brokerages.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Bitfinex\BitfinexSymbolMapper.cs" />
     <Compile Include="IOrderBookUpdater.cs" />
     <Compile Include="DefaultOrderBook.cs" />
+    <Compile Include="Bitmex\BitmexBrokerage.Messaging.cs" />
     <Compile Include="Bitmex\BitmexSymbolMapper.cs" />
     <Compile Include="Bitmex\BitmexBrokerage.cs" />
     <Compile Include="Bitmex\BitmexBrokerage.Utility.cs" />
