--- a/Common/QuantConnect.csproj
+++ b/Common/QuantConnect.csproj
@@ -287,8 +287,10 @@
     <Compile Include="Interfaces\ISubscriptionDataConfigProvider.cs" />
     <Compile Include="Interfaces\ISubscriptionDataConfigService.cs" />
     <Compile Include="Interfaces\ITimeKeeper.cs" />
+    <Compile Include="Orders\BitmexOrderProperties.cs" />
     <Compile Include="IsolatorLimitResult.cs" />
     <Compile Include="Orders\Fees\AlphaStreamsFeeModel.cs" />
+    <Compile Include="Orders\Fees\BitmexFeeModel.cs" />
     <Compile Include="Orders\Fills\Fill.cs" />
     <Compile Include="Orders\Fills\FillModelParameters.cs" />
     <Compile Include="Orders\Fees\FeeModel.cs" />
