--- a/ToolBox/QuantConnect.ToolBox.csproj
+++ b/ToolBox/QuantConnect.ToolBox.csproj
@@ -230,6 +230,8 @@
   <ItemGroup>
     <Compile Include="BitfinexDownloader\BitfinexDataDownloader.cs" />
     <Compile Include="BitfinexDownloader\BitfinexDownloaderProgram.cs" />
+    <Compile Include="BitmexDownloader\BitmexDataDownloader.cs" />
+    <Compile Include="BitmexDownloader\BitmexDownloaderProgram.cs" />
     <Compile Include="CoinApiDataConverter\CoinApiDataConverterProgram.cs" />
     <Compile Include="CoinApiDataConverter\CoinApiDataConverter.cs" />
     <Compile Include="CoinApiDataConverter\CoinApiDataReader.cs" />
