Testing: base brokerage tests

--- a/Tests/QuantConnect.Tests.csproj
+++ b/Tests/QuantConnect.Tests.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Brokerages\Bitfinex\BitfinexFeeModelTests.cs" />
     <Compile Include="Brokerages\Bitfinex\BitfinexSymbolMapperTests.cs" />
     <Compile Include="Brokerages\Bitfinex\BitfinexBrokerageHistoryProviderTests.cs" />
+    <Compile Include="Brokerages\Bitmex\BitmexBrokerageTests.cs" />
     <Compile Include="Brokerages\Bitmex\BitmexFeeModelTests.cs" />
     <Compile Include="Brokerages\Bitmex\BitmexSymbolMapperTests.cs" />
     <Compile Include="Brokerages\DowngradeErrorCodeToWarningBrokerageMessageHandlerTests.cs" />
